# Point_Parser

./: .gitignore  CMakeLists.txt  README.md  build.sh
input_example/: file1.txt  file3.json
scripts/: plot.py  run.sh
src/: binary_parser.cpp  binary_parser.h  json_parser.cpp  json_parser.h  main.cpp  parser_base.h  parser_factory.cpp  parser_factory.h  text_parser.cpp  text_parser.h
